--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,22 +1,23 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
-        <span class="sr-only">Bootstrap</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Bootstrap
-
-      </a>
-    </div>
-    <div id="gnavi" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="">top</a></li>
-        <li><a href="">menu1</a></li>
-        <li><a href="">menu2</a></li>
-      </ul>
-    </div>
-  </div>
+<header class="header">Bootstrap</header>
+<nav class="menu">
+    <ul>
+        <li>top</li>
+        <li>menu1</li>
+        <li>menu2</li>
+    </ul>
 </nav>
+<article>
+    <div class="contents">
+        <ul>
+            <li>contents1</li>
+            <li>contents2</li>
+        </ul>
+    </div>
+    <div class="topic">
+         <ul>
+            <li>bootstrapを使ってレスポンシブデザインを実現しよう！</li>
+            <li>やればできる！bootstrapを使ってみよう！</li>
+            <li>怖くない！レスポンシブデザインができるようになればWebアプリケーションもワンランク上に！</li>
+        </ul>
+    </div>
+</article>
