--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,25 +1,29 @@
 <div class="container">
+  <ul class="row">
   <header class="header">Bootstrap</header>
-  <nav class="menu">
-      <ul class='row'>
-          <li class='col-md-4'>top</li>
-          <li class='col-md-4'>menu1</li>
-          <li class='col-md-4'>menu2</li>
-      </ul>
-  </nav>
+    <nav class="menu">
+        <ul class="row">
+            <li class="col-md-4">top</li>
+            <li class="col-md-4">menu1</li>
+            <li class="col-md-4">menu2</li>
+        </ul>
+    </nav>
+
   <article>
-      <div class="contents">
-          <ul class='row'>
-              <li class='col-md-6'>contents1</li>
-              <li class='col-md-6'>contents2</li>
-          </ul>
-      </div>
-      <div class="topic">
-           <ul>
-              <li>bootstrapを使ってレスポンシブデザインを実現しよう！</li>
-              <li>やればできる！bootstrapを使ってみよう！</li>
-              <li>怖くない！レスポンシブデザインができるようになればWebアプリケーションもワンランク上に！</li>
-          </ul>
-      </div>
+    <div class="contents">
+      <ul class="row">
+            <li class="col-md-6 col-md-3">contents1</li>
+            <li class="col-md-6 col-md-3">contents2</li>
+            <li class="col-md-6 col-md-3">contents3</li>
+            <li class="col-md-6 col-md-3">contents4</li>
+      </ul>
+    </div>
+    <div class="topic">
+         <ul>
+            <li>bootstrapを使ってレスポンシブデザインを実現しよう！</li>
+            <li>やればできる！bootstrapを使ってみよう！</li>
+            <li>怖くない！レスポンシブデザインができるようになればWebアプリケーションもワンランク上に！</li>
+        </ul>
+    </div>
   </article>
 </div>
