--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,4 @@
 <div class="container">
-  <ul class="row">
   <header class="header">Bootstrap</header>
     <nav class="menu">
         <ul class="row">
@@ -12,10 +11,10 @@
   <article>
     <div class="contents">
       <ul class="row">
-            <li class="col-md-6 col-md-3">contents1</li>
-            <li class="col-md-6 col-md-3">contents2</li>
-            <li class="col-md-6 col-md-3">contents3</li>
-            <li class="col-md-6 col-md-3">contents4</li>
+            <li class="col-md-3">contents1</li>
+            <li class="col-md-3">contents2</li>
+            <li class="col-md-3">contents3</li>
+            <li class="col-md-3">contents4</li>
       </ul>
     </div>
     <div class="topic">
