--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -10,19 +10,28 @@
 
   <article>
     <div class="contents">
-      <ul class="row">
-        <li class="col-md-3">contents1</li>
-        <li class="col-md-3">contents2</li>
-        <li class="col-md-3">contents3</li>
-        <li class="col-md-3">contents4</li>
-      </ul>
-    </div>
-    <div class="topic">
-      <ul>
-        <li>bootstrapを使ってレスポンシブデザインを実現しよう！</li>
-        <li>やればできる！bootstrapを使ってみよう！</li>
-        <li>怖くない！レスポンシブデザインができるようになればWebアプリケーションもワンランク上に！</li>
-      </ul>
+      <div class="row">
+
+        <div class="col-md-6">
+          <ul class="row_A">
+            <li class="col-sm-6 col-md-3">contents1</li>
+            <li class="col-sm-6 col-md-offset-1 col-md-8">contents2</li>
+            <li class="col-sm-6 col-md-5">contents3</li>
+            <li class="col-sm-6 col-md-offset-2 col-md-5">contents4</li>
+          </ul>
+        </div>
+
+        <div class="col-md-6">
+          <div class="topic">
+            <ul class="row_B">
+              <li class="col-md-12">bootstrapを使ってレスポンシブデザインを実現しよう！</li>
+              <li class="col-md-12">やればできる！bootstrapを使ってみよう！</li>
+              <li class="col-md-12">怖くない！レスポンシブデザインができるようになればWebアプリケーションもワンランク上に!</li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
     </div>
   </article>
 </div>
