--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -27,6 +27,7 @@ ul{
     border: solid 1px #fff;
 }
 .topic li{
+    background-color:#fff;
     margin:1%;
     border-bottom: dotted 1px #333333;
 }
