--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -28,7 +28,9 @@ ul{
 }
 .topic li{
     background-color:#fff;
+    color:#000000;
     margin:1%;
+    padding:0%;
     border-bottom: dotted 1px #333333;
 }
 .container{
