--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -16,7 +16,7 @@ ul{
     color:#fff;
 }
 .menu li {
-    padding:10% 10%;
+    padding:5% 10%;
     text-align:center;
 }
 .contents li{
@@ -30,7 +30,7 @@ ul{
     background-color:#fff;
     color:#000000;
     margin:1%;
-    padding:0%;
+    padding:0;
     border-bottom: dotted 1px #333333;
 }
 .container{
