--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -2,7 +2,7 @@ li{
     list-style:none;
 }
 ul{
-    padding:10% 10%;
+    padding:0;
 }
 
 .header{
@@ -30,7 +30,7 @@ ul{
     background-color:#fff;
     color:#000000;
     margin:1%;
-    padding:0;
+    padding:0%;
     border-bottom: dotted 1px #333333;
 }
 .container{
