--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -19,7 +19,7 @@ ul{
     padding:5% 10%;
     text-align:center;
 }
-.contents li{
+.row_A li{
     background-color:#F3A7AB;
     color:#fff;
     padding:10% 10%;
@@ -27,7 +27,6 @@ ul{
     border: solid 1px #fff;
 }
 .topic li{
-    background-color:#fff;
     color:#000000;
     margin:1%;
     padding:0%;
