--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,38 +1,27 @@
-li{
-    list-style:none;
-}
-ul{
-    padding:0;
+h1, h2, h3, h4, h5 {
+  border-style: dotted;
+  border-width: 1px;
 }
 
-.header{
-    font-size:20px;
-    font-weight:bold;
-    text-align:center;
+div, p {
+  border-style: solid;
+  border-width: 1px;
 }
 
-.menu{
-    background-color:#012F4B;
-    color:#fff;
+body {
+  background-color: #7fffd4; /* ここを変更 */
+  color: #333;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
 }
-.menu li {
-    padding:5% 10%;
-    text-align:center;
+
+div.blog-panel {
+  height: 200px;
 }
-.row_A li{
-    background-color:#F3A7AB;
-    color:#fff;
-    padding:10% 10%;
-    box-sizing: border-box;
-    border: solid 1px #fff;
-}
-.topic li{
-    color:#000000;
-    margin:1%;
-    padding:0%;
-    border-bottom: dotted 1px #333333;
-}
-.container{
-    margin-top:20px;
-    padding-bottom: 100px;
+
+div.blog-panel {
+  height: 200px;
+  margin: 20px 0;
+  padding: 10px;
 }
