--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,18 +1,17 @@
-<div class="container">
-  <div id="new-blog-link">
-    <%= link_to '新規ブログを作成する', new_blog_path %>
-  </div>
+<h1>Listing Blogs</h1>
 
-  <% @blogs.each do |blog| %>
-    <div class="blog-panel">
-      <h2><%= blog.title %></h2>
-      <p><%= blog.content %></p>
-      <p><%= blog.created_at %></p>
-      <div class="blog-links">
-        <%= link_to 'Show', blog, class: 'btn btn-default' %>
-        <%= link_to 'Edit', edit_blog_path(blog), class: 'btn btn-info' %> |
-        <%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
-      </div>
-    </div>
-  <% end %>
+<div id="new-blog-link">
+  <%= link_to '新規ブログを作成する', new_blog_path %>
 </div>
+
+<% @blogs.each do |blog| %>
+  <div class="blog-panel">
+    <h2><%= blog.title %></h2>
+    <p><%= blog.content %></p>
+    <div class="blog-links">
+      <%= link_to 'Show', blog %>
+      <%= link_to 'Edit', edit_blog_path(blog) %> |
+      <%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </div>
+  </div>
+<% end %>
