--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -2,7 +2,7 @@
 <p>タイトル:<%= @blog.title %></p>
 <p>内容:<%= @blog.content %></p>
 
-<%= form_with(model: @blog, url: new_blog_path, local: true, method: 'get') do |form| %>
+<%= form_with(model: @blog, url: blog_path, local: true, method: 'get') do |form| %>
   <%= form.hidden_field :title %>
   <%= form.hidden_field :content %>
   <%= form.submit "もどる", name: 'back' %>
