--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,19 +1,18 @@
 h1, h2, h3, h4, h5 {
   border-style: dotted;
-  border-width: 1px;
+  border-width: 5px;
 }
 
 div, p {
   border-style: solid;
-  border-width: 1px;
+  border-width: 2px;
 }
 
 body {
-  background-color: #7fffd4; /* ここを変更 */
+  background-color: #fff; /* ここを変更 */
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+  font-size: 25px;
 }
 
 div.blog-panel {
@@ -22,6 +21,6 @@ div.blog-panel {
 
 div.blog-panel {
   height: 200px;
-  margin: 20px 0;
+  margin: 50px 0;
   padding: 10px;
 }
