--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>例コード</title>
+  <title>Let's ブログ</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -10,16 +10,15 @@
 
   <header>
     <ul>
-      <li><a href="#">Bootstrapテキストページ</a></li>
-      <li><a href="#">トップページ</a></li>
+      <li><a href="#">Let's ブログ</a></li>
     </ul>
   </header>
 
 <%= yield %>
 
   <footer>
-    <p>運営会社DIVE INTO CODE株式会社</p>
-    <p>© 2015-2016 Copyright DIVE INTO CODE Corp.</p>
+    <p>運営会社 Let's 株式会社</p>
+    <p>since 2018.3</p>
   </footer>
 
 </body>
