--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -1,7 +1,7 @@
 header {
   width: 100%;
-  background-color: #2c3e50;
-  height: 54px;
+  background-color: #008080;
+  height: 60px;
 }
 
 header ul {
@@ -29,12 +29,12 @@ header ul:after {
 
 footer {
   width: 100%;
-  background-color:#2c3e50;
+  background-color:#008080;
   padding: 20px 0 10px 0;
   color: white;
   margin: auto;
   padding-bottom: 10px;
-  font-size: 12px;
+  font-size: 20px;
   position: absolute;
   bottom: 0;
 }
