--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,9 +1,7 @@
 h1, h2, h3, h4, h5 {
 }
 
-div, p {
-  border-width: 2px;
-}
+
 
 body {
   background-color: #fff; /* ここを変更 */
@@ -20,4 +18,9 @@ div.blog-panel {
   height: 200px;
   margin: 50px 0;
   padding: 10px;
+}
+
+div.blog-panel, p {
+  border-style: solid;
+  border-width: 2px;
 }
