--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,6 +1,6 @@
 <p>誰でも気軽にブログが作れるよ！やって見よう！</p>
 
-<h1>Listing</h1>
+<h1>TRY !!</h1>
 
 <div id="new-blog-link">
   <%= link_to '新規ブログを作成する', new_blog_path %>
