--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,4 +1,9 @@
-<p>誰でも気軽にブログが作れるよ！やって見よう！</p>
+<div class="index-msg">
+  <p>
+    せっかく旅行にいったんだから！せっかく仕事頑張ったんだから！せっかくヒマなんだから！<br>
+    忘れないうちにブログを書こう、みんなに自慢しよう！
+  </p>
+</div>
 
 <h1>TRY !!</h1>
 
