--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="blog_title">
     <%= form.label :content %>
-    <%= form.text_field :content %>
+    <%= form.area_field :content %>
   </div>
   <%= form.submit %>
 <% end %>
