--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,7 +1,7 @@
 <div class="index-msg">
   <p>
     せっかく旅行にいったんだから！せっかく仕事頑張ったんだから！せっかくヒマなんだから！<br>
-    忘れないうちにブログを書こう、みんなに自慢しよう！
+    忘れないうちにブログを書こう、みんなに報告しよう！
   </p>
 </div>
 
