--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   <header>
     <ul>
       <li><a href="#">Let's ブログ</a></li>
+      <li>せっかく旅行にいったんだから！せっかく仕事頑張ったんだから！せっかくヒマなんだから！<br>
+      忘れないうちにブログを書こう、みんなに報告しよう！
+      </li>
     </ul>
   </header>
 
