--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -2,18 +2,19 @@ header {
   width: 100%;
   background-color: #008080;
   height: 60px;
+  margin-bottom: 20px;
 }
 
 header ul {
   margin: 0 auto;
   list-style: none;
+  color: white;
 }
 
 header ul a {
   display: block;
   padding: 15px;
   text-decoration: none;
-  color: white;
 }
 
 header li {
