--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -6,7 +6,7 @@ h1, h2, h3, h4, h5 {
 body {
   background-color: #fff; /* ここを変更 */
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 游ゴシック体, 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
   font-size: 25px;
 }
 
