--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,11 +1,11 @@
 <div class="index-msg">
-  <p>「新規ブログを作成する」をクリックすればいいだけ🎶<p>
+  <p>「TRY !!」をクリックすればいいだけ🎶<p>
 </div>
 
-<h1>TRY !!</h1>
+<h1>T新規ブログを作成する</h1>
 
 <div id="new-blog-link">
-  <%= link_to '新規ブログを作成する', new_blog_path %>
+  <%= link_to 'TRY !!', new_blog_path %>
 </div>
 
 <% @blogs.each do |blog| %>
