--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -1,7 +1,6 @@
 header {
   width: 100%;
   background-color: #008080;
-  height: 60px;
   margin-bottom: 20px;
 }
 
@@ -15,6 +14,7 @@ header ul a {
   display: block;
   padding: 15px;
   text-decoration: none;
+  color: white;
 }
 
 header li {
