--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -2,7 +2,7 @@
   <p>「TRY !!」をクリックすればいいだけ🎶<p>
 </div>
 
-<h1>T新規ブログを作成する</h1>
+<h1>新規ブログを作成する</h1>
 
 <div id="new-blog-link">
   <%= link_to 'TRY !!', new_blog_path %>
