--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <header>
     <ul>
       <li><a href="#">Let's ブログ</a></li>
-      <li>せっかく旅行にいったんだから！せっかく仕事頑張ったんだから！せっかくヒマなんだから！<br>
+      <li>せっかく旅行にいったんだから！せっかく仕事頑張ったんだから！<br>
       忘れないうちにブログを書こう、みんなに報告しよう！
       </li>
     </ul>
