--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,5 @@
 <div class="index-msg">
-  <p>「TRY !!」をクリックすればいいだけ🎶<p>
+  <p>" TRY !! ""をクリックするだけ🎶<p>
 </div>
 
 <h1>新規ブログを作成する</h1>
@@ -8,6 +8,7 @@
   <%= link_to 'TRY !!', new_blog_path %>
 </div>
 
+<p>過去のブログ一覧</p>
 <% @blogs.each do |blog| %>
   <div class="blog-panel">
     <h2><%= blog.title %></h2>
