--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,9 +1,13 @@
 <h1>ブログ画面詳細</h1>
-<p>タイトル:<%= @blog.title %></p>
-<p>内容:<%= @blog.content %></p>
+<div class=form>
+  <p>タイトル:<%= @blog.title %></p>
+  <p>内容:<%= @blog.content %></p>
+</div>
 
 <%= form_with(model: @blog, url: new_blog_path, local: true, method: 'get') do |form| %>
   <%= form.hidden_field :title %>
   <%= form.hidden_field :content %>
+<div class=buttom>
   <%= form.submit "もどる", name: 'back' %>
+</div>
 <% end %>
