--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -10,6 +10,14 @@ body {
   font-size: 25px;
 }
 
+div.alert_msg {
+  margin-left: 300px;
+}
+
+div.blog_title {
+  margin-left: 300px;
+}
+
 div.blog-panel {
   height: 200px;
 }
