--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,11 +1,12 @@
 <%= form_with(model: @blog, local: true ,url: choose_new_or_edit ) do |form| %>
   <% if @blog.errors.any? %>
     <div class="container">
-      <h2><%= @blog.errors.count %>件のエラーがあります。</h2>
-      <div class="alert alert-danger">alertクラス</div>
+      <div class="alert alert-danger"><%= @blog.errors.count %>件のエラーがあります。</div>
       <ul>
       <% @blog.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+        <div class=alert_msg>
+          <li><%= msg %></li>
+        </div>
       <% end %>
       </ul>
     </div>
