--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -13,10 +13,10 @@
 
   <div class="container">
     <div class="blog-panel">
-      <nav> class="blog_list"></nav>
-        <ul class="row">
-          <li class="col-md-4">><%= blog.title %></li>
-          <li class="col-md-4">><%= blog.content %></li>
+      <nav class="row"></nav>
+        <ul class="col-md-4">
+          <li><%= blog.title %></li>
+          <li><%= blog.content %></li>
         </ul>
       </nav>
     </div>
