--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -14,25 +14,26 @@ div.alert_msg {
   margin-left: 300px;
 }
 
-div.blog_title {
+ul.blog_title {
   margin-left: 300px;
 }
 
-div.blog-panel {
+ul.blog-panel {
   height: 200px;
 }
 
-div.blog-panel {
+ul.blog-panel {
   height: 200px;
   margin: 50px 0;
   padding: 10px;
 }
 
-div.blog-panel p{
+ul.blog-panel p{
   border-style: solid;
   border-width: 2px;
 }
 
 div.index-msg {
   text-align: left;
+  margin-left: 100px;
 }
