--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -16,12 +16,12 @@ header ul a {
   padding: 15px;
   text-decoration: none;
   color: white;
-  font-size: 60px;
+  font-size: 50px;
 }
 
 header li {
   float: left;
-  width: auto;
+  margin: auto;
 }
 
 header ul:after {
