--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -22,12 +22,13 @@
       </nav>
     </div>
 
-    <div class="blog-links">
-      <nav class="col-md-6">
-        <%= link_to 'Show', blog %>
-        <%= link_to 'Edit', edit_blog_path(blog) %> |
-        <%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %>
-      </nav>
+      <div class="blog-links">
+        <nav class="col-md-6">
+          <%= link_to 'Show', blog %>
+          <%= link_to 'Edit', edit_blog_path(blog) %> |
+          <%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </nav>
+      </div>
     </div>
   </div>
 
