--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -29,3 +29,11 @@
     <% end %>
   </div>
 </div>
+
+<nav aria-label="...">
+  <ul class="pagination">
+    <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+    <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+    ...
+  </ul>
+</nav>
