--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -16,10 +16,13 @@ div.alert_msg {
 
 ul.blog_title {
   margin-left: 300px;
+  font-size: 20px;
+
 }
 
 ul.blog-panel {
   height: 200px;
+  font-size: 15px;
 }
 
 ul.blog-panel {
