--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -16,12 +16,16 @@
     <% @blogs.each do |blog| %>
       <nav class="col-md-6">
         <ul class="blog-panel">
-          <h2>title</h2>
-          <h2 class="navbar-text">
+          <h3>タイトル</h3>
+          <p class="navbar-text">
             <%= blog.title %>
-          </h2>
-            <p>本文></p>
-            <p><%= blog.content %></p>
+          </p>
+            <div class="blog_title_index">
+              <p>本文</p>
+            <div class="blog_title_index">
+            <div class="blog_content">
+              <p><%= blog.content %></p>
+            </div>
         </ul>
 
         <div class="blog-links">
