--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -19,14 +19,16 @@ ul.blog_title {
   font-size: 20px;
 }
 
-ul.blog_panel h3 {
+ul.blog_title_index h3 {
   text-align: left;
   color: #d3d3d3;
+  font-size: 15px;
 }
 
-div.blog_title_index p {
+div.blog_content_index p {
   text-align: left;
   color: #d3d3d3;
+  font-size: 15px;
 }
 
 ul.blog-panel {
