--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -14,25 +14,29 @@ div.alert_msg {
   margin: auto;
 }
 
-ul.blog_title {
-  margin-left: 300px;
-  font-size: 20px;
+
+
+div.blog_title_index p {
+  text-align: left;
+  color: ##696969;
+  font-size: 25px;
 }
 
-ul.blog_title_index h3 {
-  text-align: left;
-  color: #d3d3d3;
-  font-size: 15px;
+ul.blog_content p{
+  border-style: solid;
+  border-width: 2px;
+  border-color: #d3d3d3;
+  font-size: 30px;
+}
+
+ul.blog_title {
+  margin-left: 300px;
+  font-size: 30px;
 }
 
 div.blog_content_index p {
   text-align: left;
-  color: #d3d3d3;
-  font-size: 15px;
-}
-
-ul.blog-panel {
-  height: 200px;
+  color: #696969;
   font-size: 15px;
 }
 
@@ -42,17 +46,11 @@ ul.blog-panel {
   padding: 10px;
 }
 
-ul.blog_content p{
-  border-style: solid;
-  border-width: 2px;
-  border-color: #d3d3d3;
-}
-
 div.index-msg {
   text-align: left;
   margin-left: 100px;
 }
 
 div.past_blog {
-  margin-top: 100px;
+  margin-top: : : 100px;
 }
