--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -18,7 +18,7 @@ div.alert_msg {
 
 div.blog_title_index p {
   text-align: left;
-  color: ##696969;
+  color: #696969;
   font-size: 25px;
 }
 
@@ -52,5 +52,5 @@ div.index-msg {
 }
 
 div.past_blog {
-  margin-top: : : 100px;
+  margin-top: 100px;
 }
