--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -21,7 +21,9 @@
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
-  <%= form.submit %>
+    <a class=square_btn>
+      <%= form.submit %>
+    </a>
 <% end %>
 
 <%= link_to "ブログ一覧画面にもどる", blogs_path %>
