--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,9 +1,17 @@
 <h1>ブログ画面詳細</h1>
-<p>タイトル:<%= @blog.title %></p>
-<p>内容:<%= @blog.content %></p>
+<p>タイトル</p>
+<p class="navbar-text""navbar-text">
+  <%= @blog.title %>
+</p>
+<p>内　　容</p>
+<p class="navbar-text""navbar-text">
+  <%= @blog.content %>
+</p>
 
 <%= form_with(model: @blog, url: new_blog_path, local: true, method: 'get') do |form| %>
   <%= form.hidden_field :title %>
   <%= form.hidden_field :content %>
-  <%= form.submit "もどる", name: 'back' %>
+  <a class=square_btn>
+    <%= form.submit "もどる", name: 'back' %>
+  </a>
 <% end %>
