--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -19,12 +19,12 @@
           <div class="blog_title_index">
             <p>タイトル</p>
           </div>
-           <%= blog.title(post.content, length: 10 ) %>
+           <%= blog.title %>
           <div class="blog_content_index">
             <p>本文</p>
           </div>
           <div class="blog_content">
-            <p><%= blog.content(post.content, length: 30 ) %></p>
+            <p><%= blog.content %></p>
           </div>
         </ul>
 
