--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,10 +1,10 @@
 <h1>ブログ画面詳細</h1>
 <p>タイトル</p>
-<p class="navbar-text""navbar-text">
+<p class="navbar-text">
   <%= @blog.title %>
 </p>
-<p>内　　容</p>
-<p class="navbar-text""navbar-text">
+<p>本文</p>
+<p class="navbar-text">
   <%= @blog.content %>
 </p>
 
