--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -13,11 +13,14 @@ div.blog_title_index p {
 }
 
 ul.blog_title {
+  background-color: #ffa07a;
   margin-left: 300px;
   font-size: 30px;
+  color: #fff;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
+  overflow: hidden;
 }
 
 div.blog_content_index p {
@@ -34,6 +37,7 @@ div.blog_content p{
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
+  overflow: hidden;
 }
 
 ul.blog-panel {
@@ -52,8 +56,37 @@ div.past_blog {
 }
 /*　~index　*/
 /*　show~　*/
-.navbar-text p {
-  width: 600px;
+.title {
+  text-align: left;
+  width: 70%;
+  margin: 15%;
+  padding: 10px;
+}
+
+.content {
+  text-align: left;
+  width: 70%;
+  margin: 15%;
+  padding: 10px;
+}
+
+.blog_title_show {
+  text-align: left;
+  width: 70%;
+  margin: 15%;
+  padding: 10px;
+  border: solid 5px #ff7f50;
+  background:#ffdab9;
+}
+
+.blog_title_show {
+  text-align: left;
+  width: 70%;
+  margin: 15%;
+  padding: 10px;
+  border: solid 5px #ff7f50;
+  background:#ffdab9;
+}
 }
 
 /*　show~　*/
@@ -70,7 +103,6 @@ div.alert_msg {
     padding: 0.5em 1em;
     text-decoration: none;
     background: #ff7f50;/*ボタン色*/
-    color: #FFF;
     border-bottom: solid 4px #dc143c;
     border-radius: 3px;
 }
