--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -3,7 +3,7 @@
 <div class="blog_title_show">
   <%= @blog.title %>
 </div>
-<div class=content>本文</div>>
+<div class=content>本文</div>
 <div class="blog_content_show">
   <%= @blog.content %>
 </div>
