--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -79,7 +79,7 @@ div.past_blog {
   background:#ffdab9;
 }
 
-.blog_title_show {
+.blog_content_show {
   text-align: left;
   width: 70%;
   margin: 15%;
