--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -19,11 +19,11 @@
           <div class="blog_title_index">
             <p>タイトル</p>
           </div>
-           <%= blog.title %>
+            <p><%= blog.title %></p>
           <div class="blog_content_index">
             <p>本文</p>
           </div>
-          <div class="blog_content">
+          <div class="blog_content_index2">
             <p><%= blog.content %></p>
           </div>
         </ul>
@@ -36,14 +36,4 @@
       </nav>
     <% end %>
   </div>
-</div>
-
-<div>
-  <nav aria-label="...">
-    <ul class="pagination">
-      <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-      <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-      ...
-    </ul>
-  </nav>
 </div>
