--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -19,7 +19,9 @@
           <div class="blog_title_index">
             <p>タイトル</p>
           </div>
+          <div class="blog_title_index2">
             <p><%= blog.title %></p>
+          </div>
           <div class="blog_content_index">
             <p>本文</p>
           </div>
