--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,9 +1,9 @@
 <h1>ブログ画面詳細</h1>
-<div class=title>タイトル</div>
+<div class="title">タイトル</div>
 <div class="blog_title_show">
   <%= @blog.title %>
 </div>
-<div class=content>本文</div>
+<div class="content">本文</div>
 <div class="blog_content_show">
   <%= @blog.content %>
 </div>
