--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -5,11 +5,11 @@
   <%= form.hidden_field :content %>
 
   <div class="title">タイトル</div>
-  <div class=blog_title_confirm>
+  <div class="blog_title_confirm">
     <p><%= @blog.title %></p>
   </div>
   <div class="content">本文</div>
-  <div class=blog_content_confirm>
+  <div class="blog_content_confirm">
     <%= @blog.content %></p>
   </div>
   <a class="square_btn">
