--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,11 +1,11 @@
 /*　button~　*/
 .square_btn{
     display: inline-block;
-    margin-top: 50px;
     padding: 0.5em 1em;
     text-decoration: none;
-    background: #ff7f50;/*ボタン色*/
-    border-bottom: solid 4px #dc143c;
+    background-color: : #ff7f50;/*ボタン色*/
+    color: #FFF;
+    border-bottom: solid 4px #ff4500;
     border-radius: 3px;
 }
 .square_btn:active {/*ボタンを押したとき*/
@@ -13,7 +13,7 @@
     -webkit-transform: translateY(4px);
     transform: translateY(4px);/*下に動く*/
     box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);/*影を小さく*/
-    border-bottom: none;/*線を消す*/
+    border-bottom: none;
 }
 /*　button~　*/
 
@@ -31,11 +31,9 @@ div.blog_title_index p,div.blog_content_index p {
 }
 
 div.blog_title_index2 p {
-  background-color: #ffa07a;
-  border-color: #d3d3d3;
-  margin-left: 300px;
-  font-size: 30px;
-  color: #fff;
+  background-color: #ffdab9;
+  border: solid 5px #ff7f50;
+  font-size: 27px;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
@@ -43,10 +41,9 @@ div.blog_title_index2 p {
 }
 
 div.blog_content_index2 p {
-  border-style: solid;
-  border-width: 2px;
+  border: solid 5px
   border-color: #d3d3d3;
-  font-size: 30px;
+  font-size: 25px;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
@@ -76,7 +73,7 @@ div.title, div.content {
   padding: 10px;
 }
 
-div.blog_title_show {
+div.blog_title_show,div.blog_title_confirm {
   text-align: left;
   width: 70%;
   margin: 0% 15% 0% 15%;
@@ -86,7 +83,7 @@ div.blog_title_show {
   word-break: normal;
 }
 
-div.blog_content_show {
+div.blog_content_show, div.blog_content_confirm {
   text-align: left;
   width: 70%;
   margin: 0% 15% 0% 15%;
