--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: @blog, local: true ,url: choose_new_or_edit ) do |form| %>
   <% if @blog.errors.any? %>
     <div class="container">
-      <div class="panel panel-danger">
+      <div class="alert alert-success" role="alert">
         <%= @blog.errors.count %>件のエラーがあります。
       </div>
       <ul>
