--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -3,7 +3,7 @@
     display: inline-block;
     padding: 0.5em 1em;
     text-decoration: none;
-    background-color: : #ff7f50;/*ボタン色*/
+    background-color: #ff7f50;/*ボタン色*/
     color: #FFF;
     border-bottom: solid 4px #ff4500;
     border-radius: 3px;
@@ -41,7 +41,7 @@ div.blog_title_index2 p {
 }
 
 div.blog_content_index2 p {
-  border: solid 5px
+  border: solid 5px;
   border-color: #d3d3d3;
   font-size: 25px;
   display: -webkit-box;
