--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -19,5 +19,7 @@
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
-  <%= form.submit %>
+  <a class=square_btn>
+    <%= form.submit %>
+  </a>
 <% end %>
