--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: @blog, local: true ,url: choose_new_or_edit ) do |form| %>
   <% if @blog.errors.any? %>
     <div class="container">
-      <div class="alert alert-success" role="alert">
+      <div class="alert alert-danger" role="alert">
         <%= @blog.errors.count %>件のエラーがあります。
       </div>
       <ul>
@@ -14,12 +14,16 @@
     </div>
   <% end %>
 
-  <div class="blog_title">
+  <div class="title">
     <%= form.label :title %>
+  </div>
+  <div class="title_text">
     <%= form.text_field :title %>
   </div>
-  <div class="blog_title">
+  <div class="content">
     <%= form.label :content %>
+  </div>
+  <div class="content_text">
     <%= form.text_field :content %>
   </div>
     <a class="square_btn">
