--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -11,12 +11,19 @@
     </div>
   <% end %>
 
-  <div class="blog_title">
+
+
+
+  <div class="title">
     <%= form.label :title %>
+  </div>
+  <div class="title_text">
     <%= form.text_field :title %>
   </div>
-  <div class="blog_title">
+  <div class="content">
     <%= form.label :content %>
+  </div>
+  <div class="content_text">
     <%= form.text_field :content %>
   </div>
   <a class=square_btn>
