--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,10 +1,10 @@
 <h1>ブログ画面詳細</h1>
 <div class="title">タイトル</div>
-<div class="blog_title_show">
+<div class="title_text">
   <%= @blog.title %>
 </div>
 <div class="content">本文</div>
-<div class="blog_content_show">
+<div class="content_text">
   <%= @blog.content %>
 </div>
 
