--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -81,7 +81,7 @@ div.title_text {
   width: 70%;
   margin: 0% 15% 0% 15%;
   padding: 10px;
-  border-color: #ff7f50;
+  border: solid 5px #ff7f50;
   background:#ffdab9;
   word-break: normal;
 }
@@ -92,7 +92,7 @@ div.content_text {
   width: 70%;
   margin: 0% 15% 0% 15%;
   padding: 10px;
-  border-color: #d3d3d3;
+  border: solid 5px #d3d3d3;
   background:#fff;
   word-break: normal;
 }
