--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -6,11 +6,11 @@
 
   <div class="title">タイトル</div>
   <div class="title_text">
-    <p><%= @blog.title %></p>
+    <%= @blog.title %>
   </div>
   <div class="content">本文</div>
   <div class="content_text">
-    <%= @blog.content %></p>
+    <%= @blog.content %>
   </div>
   <a class="square_btn">
     <%= form.submit  "登録する" %>
