--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -18,13 +18,13 @@
     <%= form.label :title %>
   </div>
   <div class="title_text">
-    <%= form.text_field :title %>
+    <%= form.text_field :title, :size=>"60" %>
   </div>
   <div class="content">
     <%= form.label :content %>
   </div>
   <div class="content_text">
-    <%= form.text_field :content %>
+    <%= form.text_field :content, :size=>"60" %>
   </div>
     <a class="square_btn">
       <%= form.submit %>
